--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Лабораторна робота, MySQL, робота з базою даних">
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Структура бази даних Dental Clinic</h1>
-<!--<img src="bd.png" alt="db image">-->
+<img src="bd.png" alt="db image" style="width: 650px; height: 550px;">
 
 <ul>
     <li><a href="showAppointments.php">Таблиця Appointments</a></li>
